--- a/Examples/Example_BouncingBall_reacting_to_mouse.html
+++ b/Examples/Example_BouncingBall_reacting_to_mouse.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="../extlib/jquery.attrchange.js"></script>
     <script type="text/javascript" src="../extlib/jcanvas.min.js"></script>
     <script type="text/javascript" src="../extlib/Vector2.js"></script>
-    <script type="text/javascript" src="../iFSM.js"></script>
+    <script type="text/javascript" src="../iFSM.compressed.js"></script>
 	<style type="text/css">
 	  html {
 	    font-family: Helvetica, Arial, sans-serif;
