--- a/Examples/Example_BouncingBall.html
+++ b/Examples/Example_BouncingBall.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="../extlib/jquery.dotimeout.js"></script>
     <script type="text/javascript" src="../extlib/jquery.attrchange.js"></script>
     <script type="text/javascript" src="../extlib/jcanvas.min.js"></script>
-    <script type="text/javascript" src="../iFSM.js"></script>
+    <script type="text/javascript" src="../iFSM.compressed.js"></script>
 	<style type="text/css">
 	  html {
 	    font-family: Helvetica, Arial, sans-serif;
