--- a/Examples/Example_PushPopState.html
+++ b/Examples/Example_PushPopState.html
@@ -65,7 +65,8 @@
     <button id="myButton">Show/Hide Text</button>
     <div id="adiv">a nice text to show the FSM capabilities with PushPop state feature :-)</div>
         <br><br>
-		<script>
+	<pre>
+	<script>
 	function escapeHtml(text) {
 		  var map = {
 		    '&': '&amp;',
@@ -80,6 +81,6 @@
 		document.write(escapeHtml($('#iFSMscript').html()))</script>
     </pre>
     <p>provided by <a href="http://www.intersel.fr">Intersel</a></p>
-
+	</pre>
 </body>
 </html>
