--- a/Examples/Example_HSM_calculator.html
+++ b/Examples/Example_HSM_calculator.html
@@ -319,6 +319,7 @@ Example inspired from <a href="http://en.wikipedia.org/wiki/UML_state_machine">h
 	    <button class="onoff on" id="kmultiply">*</button><br>
 	    <button class="onoff on" id="kequal">=</button>
     </section>
+	<pre>
         <br><br>
 	<script>
 	function escapeHtml(text) {
