--- a/Examples/Example_Request.html
+++ b/Examples/Example_Request.html
@@ -200,6 +200,7 @@ $(document).ready(function() {
     <button class="onoff" id="Close">Close</button>
     <h2>the State Definition</h2>
         <br><br>
+	<pre>
 	<script>
 	function escapeHtml(text) {
 		  var map = {
