--- a/Examples/Example_Basic.html
+++ b/Examples/Example_Basic.html
@@ -65,19 +65,24 @@ pre {
 	<br>
 	<pre>
 	<script>
-	function escapeHtml(text) {
-		  var map = {
-		    '&': '&amp;',
-		    '<': '&lt;',
-		    '>': '&gt;',
-		    '"': '&quot;',
-		    "'": '&#039;'
-		  };
+		function escapeHtml(text) {
+			var map = {
+				'&' : '&amp;',
+				'<': '&lt;',
+		    '>' : '&gt;',
+				'"' : '&quot;',
+				"'" : '&#039;'
+			};
 
-		  return text.replace(/[&<>"']/g, function(m) { return map[m]; });
+			return text.replace(/[&<>"']/g, function(m) {
+				return map[m];
+			});
 		}
-		document.write(escapeHtml($('#iFSMscript').html()))</script>
+		document.write(escapeHtml($('#iFSMscript').html()))
+	</script>
     </pre>
-    <p>provided by <a href="http://www.intersel.fr">Intersel</a></p>
+	<p>
+		provided by <a href="http://www.intersel.fr">Intersel</a>
+	</p>
 </body>
 </html>
