--- a/Examples/Example_Basic.html
+++ b/Examples/Example_Basic.html
@@ -31,7 +31,7 @@ pre {
 		FirstState : {
 			enterState : {
 				init_function : function() {
-					alert("First State");
+					alert("Hello! \nFirst State");
 				}
 			},
 			click : {
@@ -41,7 +41,7 @@ pre {
 		NextState : {
 			enterState : {
 				init_function : function() {
-					alert("Next State");
+					alert("Please to meet you! \nNext State");
 				}
 			},
 			click : {
@@ -60,6 +60,7 @@ pre {
 </script>
 </head>
 <body style="margin: 20px;">
+	<h1>Hello World example</h1>
 	<button id="myButton">Button</button>
 	<br>
 	<br>
