--- a/Examples/Example_HSM_calculator.html
+++ b/Examples/Example_HSM_calculator.html
@@ -339,7 +339,7 @@ button.off {
 				return map[m];
 			});
 		}
-		document.write(escapeHtml($('#iFSMscript').html()))
+		document.write(escapeHtml($('#iFSMscript').html()));
 	</script>
     </pre>
 	<p>
