dropdown example update

--- a/Examples/Example_DropdownMenu.html
+++ b/Examples/Example_DropdownMenu.html
@@ -165,6 +165,7 @@ div.menuInActive li.item:hover {
 				init_function:function(){
 					this.opts.dropDown.trigger('clickDoc');
 				},
+				UI_event_bubble:true,
 			},
 		},
 	};
