finger touch to move the racket

--- a/Examples/Example_BouncingBall_reacting_to_mouse.html
+++ b/Examples/Example_BouncingBall_reacting_to_mouse.html
@@ -712,7 +712,7 @@
 <body style="margin:20px;">
     <h1>The bouncing ball ....</h1>
     <p>this example shows a game loop managed with iFsm, with bouncing balls and a racket as objects using canvas (jCanvas) with layers to display them and with behaviours handled by iFSM (bouncing), using requestAnimationFrame calls instead of setTimeout</p>
-    <p>The mouse moves the racket</p>
+    <p>The mouse or finger touch move the racket</p>
     <p>The game ends when you have touched 10 times the ground</p>
     <p>The score is then displayed using the number of frames to give the score...</p>
  	<section>
