prevent preventCancel event to stack

--- a/Examples/Mastermind.html
+++ b/Examples/Mastermind.html
@@ -507,7 +507,7 @@ pre {
 		at the correct place</p>
 	<div id="selected_color_bars">
 		<div id="turn_1">
-			<div id="selected_color_bar" style="">
+			<div id="selected_color_bar">
 				<div class="selected_color" id="selected_color_1" data-color="red"
 					data-position="position_1">red</div>
 				<div class="selected_color" id="selected_color_2" data-color="red"
