--- a/Examples/Example_HSM_calculator.html
+++ b/Examples/Example_HSM_calculator.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <title>iFSM in action! a simple calculator managed with a FSM</title>
-<script type="text/javascript" src="../extlib/jquery-3.6.0.min.js"></script>
+<script type="text/javascript" src="../extlib/jquery.min.js"></script>
 <script type="text/javascript" src="../extlib/jquery.dotimeout.js"></script>
 <script type="text/javascript" src="../extlib/jquery.attrchange.js"></script>
 <script type="text/javascript" src="../iFSM.js"></script>
