--- a/Examples/processData.html
+++ b/Examples/processData.html
@@ -5,7 +5,7 @@
 	<title>iFSM in action! Finite state machines are great for
 		stimulation on simulation :-)</title>
 	<meta charset="utf-8">
-	<script type="text/javascript" src="../extlib/jquery-3.6.0.min.js"></script>
+	<script type="text/javascript" src="../extlib/jquery.min.js"></script>
 	<script type="text/javascript" src="../extlib/jquery.dotimeout.js"></script>
 	<script type="text/javascript" src="../extlib/jquery.attrchange.js"></script>
 	<script type="text/javascript" src="../iFSM.js"></script>
